<resources>
    <string name="app_name">NewGrade</string>
    <string name="CourseViewButton">View Courses</string>
    <string name="courseName">Course Name</string>
    <string name="courseGrade">Grade</string>
    <string name="teacherName">Teacher Name</string>
    <string name="RoomNumber">Rm. %1$d</string>
    <string name="PeriodOne">Period 1</string>
    <string name="periodTwo">2</string>
    <string name="periodThree">3</string>
    <string name="periodFour">4</string>
    <string name="periodFive">5</string>
    <string name="periodSix">6</string>
    <string name="periodSeven">7</string>
    <string name="periodEight">Period Eight</string>
    <string name="nightMode">Night Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="letter">This is the letter grade</string>
    <string name="gpa">GPA</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginButton">Login</string>
    <string name="userID">ID</string>
    <string name="homePageSwitch">Login Automatically?</string>
    <string name="WeightedGPA">Weighted</string>
    <string name="UnweightedGPA">Unweighted</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="updateButton">Update</string>
    <string name="popupButton">Widget Course</string>
    <string name="periodTwoOption">Period Two</string>
    <string name="periodOneOption">Period One</string>
    <string name="periodThreeOption">Period Three</string>
    <string name="periodFourOption">Period Four</string>
    <string name="periodFiveOption">Period Five</string>
    <string name="periodSixOption">Period Six</string>
    <string name="periodSevenOption">Period Seven</string>
    <string name="periodEightOption">Period Eight</string>
    <string name="backButton">Log Out</string>
    <string name="gpaWeighted">Weighted: %2$s</string>
    <string name="gpaUnweighted">Unweighted: %2$s</string>
    <string name="Period">Period</string>
</resources>
