<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/mainActivity">

    <Button
        android:id="@+id/viewCoursesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/quicksand_light"
        android:onClick="attemptToLogin"
        android:text="@string/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/yeet" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailArea"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/quicksand_light"
            android:hint="@string/userID"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yeet"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/emailArea">


        <EditText
            android:id="@+id/passwordForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/password"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/yeet"
        app:layout_constraintStart_toStartOf="@+id/yeet" />

    <TextView
        android:id="@+id/UserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/userID"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/emailArea"
        app:layout_constraintStart_toStartOf="@+id/emailArea" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand_light"
        android:shadowColor="@color/colorSecondary"
        android:text="@string/homePageSwitch"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/viewCoursesButton"
        app:layout_constraintStart_toStartOf="@+id/viewCoursesButton"
        app:layout_constraintTop_toBottomOf="@+id/viewCoursesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>